--- a/src/main/resources/assets/cardboardboxes/lang/en_US.lang
+++ b/src/main/resources/assets/cardboardboxes/lang/en_US.lang
@@ -3,4 +3,4 @@ tile.cardboardboxes:cardboardbox.inventoryFull.name=It seems your inventory is f
 tile.cardboardboxes:cardboardbox.banned.block.name=I don't think I can pick that block up
 tile.cardboardboxes:cardboardbox.banned.tile.name=I don't think I can pick that tile up
 tile.cardboardboxes:cardboardbox.noData.name=There doesn't seem to be much point in that
-tile.cardboardboxes:cardboardbox.noItem.name=Does't look like that can be picked up
+tile.cardboardboxes:cardboardbox.noItem.name=Doesn't look like that can be picked up
