feat: added 16 color variations

--- a/src/main/resources/assets/cardboardboxes/lang/en_us.json
+++ b/src/main/resources/assets/cardboardboxes/lang/en_us.json
@@ -1,5 +1,21 @@
 {
     "block.cardboardboxes.cardboardbox": "Box",
+    "block.cardboardboxes.box_white": "White Box",
+    "block.cardboardboxes.box_orange": "Orange Box",
+    "block.cardboardboxes.box_megenta": "Magenta Box",
+    "block.cardboardboxes.box_light_blue": "Light Blue Box",
+    "block.cardboardboxes.box_yellow": "Yellow Box",
+    "block.cardboardboxes.box_lime": "Lime Box",
+    "block.cardboardboxes.box_pink": "Pink Box",
+    "block.cardboardboxes.box_gray": "Gray Box",
+    "block.cardboardboxes.box_light_gray": "Light Gray Box",
+    "block.cardboardboxes.box_cyan": "Cyan Box",
+    "block.cardboardboxes.box_purple": "Purple Box",
+    "block.cardboardboxes.box_blue": "Blue Box",
+    "block.cardboardboxes.box_brown": "Brown Box",
+    "block.cardboardboxes.box_green": "Green Box",
+    "block.cardboardboxes.box_red": "Red Box",
+    "block.cardboardboxes.box_black": "Black Box",
     "block.cardboardboxes.cardboardbox.inventoryFull": "It seems your inventory is full",
     "block.cardboardboxes.cardboardbox.banned.block": "I don't think I can pick that block up",
     "block.cardboardboxes.cardboardbox.banned.tile": "I don't think I can pick that tile up",
