fix: magenta box language key

--- a/src/main/resources/assets/cardboardboxes/lang/en_us.json
+++ b/src/main/resources/assets/cardboardboxes/lang/en_us.json
@@ -14,7 +14,7 @@
     "block.cardboardboxes.box_light_blue": "Light Blue Box",
     "block.cardboardboxes.box_blue": "Blue Box",
     "block.cardboardboxes.box_purple": "Purple Box",
-    "block.cardboardboxes.box_megenta": "Magenta Box",
+    "block.cardboardboxes.box_magenta": "Magenta Box",
     "block.cardboardboxes.box_pink": "Pink Box",
     "block.cardboardboxes.cardboardbox.inventoryFull": "It seems your inventory is full",
     "block.cardboardboxes.cardboardbox.banned.block": "I don't think I can pick that block up",
