feature(colored boxes): translate to german

--- a/src/main/resources/assets/cardboardboxes/lang/de_de.json
+++ b/src/main/resources/assets/cardboardboxes/lang/de_de.json
@@ -1,5 +1,21 @@
 {
     "block.cardboardboxes.cardboardbox": "Kiste",
+    "block.cardboardboxes.box_white": "Weiße Kiste",
+    "block.cardboardboxes.box_light_gray": "Hellgraue Kiste",
+    "block.cardboardboxes.box_gray": "Graue Kiste",
+    "block.cardboardboxes.box_black": "Schwarze Kiste",
+    "block.cardboardboxes.box_brown": "Braune Kiste",
+    "block.cardboardboxes.box_red": "Rote Kiste",
+    "block.cardboardboxes.box_orange": "Orange Kiste",
+    "block.cardboardboxes.box_yellow": "Gelbe Kiste",
+    "block.cardboardboxes.box_lime": "Hellgrüne Kiste",
+    "block.cardboardboxes.box_green": "Grüne Kiste",
+    "block.cardboardboxes.box_cyan": "Türkise Kiste",
+    "block.cardboardboxes.box_light_blue": "Hellblaue Kiste",
+    "block.cardboardboxes.box_blue": "Blaue Kiste",
+    "block.cardboardboxes.box_purple": "Violette Kiste",
+    "block.cardboardboxes.box_megenta": "Magenta Kiste",
+    "block.cardboardboxes.box_pink": "Rosa Kiste",
     "block.cardboardboxes.cardboardbox.inventoryFull": "Es scheint, als ob dein Inventar voll ist",
     "block.cardboardboxes.cardboardbox.banned.block": "Ich glaube nicht, dass ich diesen Block aufheben kann",
     "block.cardboardboxes.cardboardbox.banned.tile": "Ich glaube nicht, dass ich dieses Objekt aufheben kann",
