fix: magenta box language key in german file

--- a/src/main/resources/assets/cardboardboxes/lang/de_de.json
+++ b/src/main/resources/assets/cardboardboxes/lang/de_de.json
@@ -14,7 +14,7 @@
     "block.cardboardboxes.box_light_blue": "Hellblaue Kiste",
     "block.cardboardboxes.box_blue": "Blaue Kiste",
     "block.cardboardboxes.box_purple": "Violette Kiste",
-    "block.cardboardboxes.box_megenta": "Magenta Kiste",
+    "block.cardboardboxes.box_magenta": "Magenta Kiste",
     "block.cardboardboxes.box_pink": "Rosa Kiste",
     "block.cardboardboxes.cardboardbox.inventoryFull": "Es scheint, als ob dein Inventar voll ist",
     "block.cardboardboxes.cardboardbox.banned.block": "Ich glaube nicht, dass ich diesen Block aufheben kann",
